--- a/Lesson_71/index.html
+++ b/Lesson_71/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 
-<button type="button" id="startInterval"> بدء تكرار</button>
-<button type="button" id="stopInterval"> ايقاف تكرار</button>
+
+<button id="settimeout">بدء ضبط مهلة</button> 
+<button id="cleartimeout">حذف ضبط مهلة</button> 
+
  <script src="app.js"> </script>
 </body>
 </html>
