--- a/Projects/geo-location/index.html
+++ b/Projects/geo-location/index.html
@@ -19,8 +19,8 @@
         <img src="logo.jpg" alt="" width="60" >
       </a>
 
-      <button id="getLocation" class="btn" style="background: linear-gradient(89deg, #38de7a 4%, #476df7 4%); border: 0px;font-weight: bold;color: white;">تحديد موقعي</button>
-      <button class="btn btn-dark">Coder Shiyar</button>
+      <button id="getLocation" class="btn " style="background: linear-gradient(89deg, #38de7a 4%, #476df7 4%); border: 0px;font-weight: bold;color: white;">تحديد موقعي</button>
+      <button class="btn " style="  border: 2px solid #486ef8; background: white;">Coder Shiyar</button>
 
     </div>
   </nav>
