--- a/Lesson_71/index.html
+++ b/Lesson_71/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coder Shiyar - JavaScript</title>
+    <title> Coder Shiyar </title>
 </head>
 <body>
 
+    <button id="setInterval">تكرار تنفيذ اوامر</button>
+    <button id="removeInterval">إيقاف تكرار تنفيذ اوامر</button>
+    <h1 id="counter"></h1>
+ <script src="app.js"></script>
 
-<button id="settimeout">بدء ضبط مهلة</button> 
-<button id="cleartimeout">حذف ضبط مهلة</button> 
-
- <script src="app.js"> </script>
 </body>
 </html>
