--- a/Lesson_95/index.html
+++ b/Lesson_95/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Coder Shiyar </title>
-</head>
+
+  </head>
 <body>
 
- <script src="app.js"> 
+  
+<main id="main">
 
-</script>
+</main>
 
+<button id="stopShareMap">إيقاف مشاركة موقع</button>
+ <script src="app.js"></script>
 </body>
 </html>
