--- a/Lesson_11-2/index.html
+++ b/Lesson_11-2/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Coder Shiyar </title>
+    <title>Coder Shiyar - JavaScript</title>
 </head>
 <body>
 
+<header id="header"></header>
 
  <script src="app.js"> </script>
 </body>
