lesson about localstorage and cookie added

--- a/Lesson_96/index.html
+++ b/Lesson_96/index.html
@@ -6,9 +6,9 @@
     <title>Coder Shiyar - JavaScript</title>
 </head>
 <body>
+    
 
-<input type="color" id="color"/>
-
+Coder Shiyar 
 
  <script src="app.js"> </script>
 </body>
