--- a/Lesson_16/index.html
+++ b/Lesson_16/index.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    
+    <title>Coder Shiyar - JavaScript</title>
+    <style>
+        ol{
+            background-color: rgb(255, 122, 122);
+            color: white;
+        }
+        ol li{
+            margin-top: 5px;
+            border-top: 3px solid white;
+        }
+        h2{
+            margin: 0px;
+           background: rgb(51, 51, 51);
+           color: white;
+           font-size: 20px;
+           text-align: center;
+           padding: 5px 0px;
+           
+        }
+    </style>
 </head>
 <body>
+    <h2>اللغات الذي اتحدث بها</h2>
+    <ol id="list">
 
-    <h1 id="value"></h1>
-   <script src="script.js"></script>
-
-  
+    </ol>
+ <script src="app.js"> </script>
 </body>
 </html>
