--- a/Lesson95/index.html
+++ b/Lesson95/index.html
@@ -3,17 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Coder Shiyar </title>
-
-  </head>
+    <title>Coder Shiyar - JavaScript</title>
+</head>
 <body>
+    
 
-  
-<main id="main">
+Coder Shiyar 
 
-</main>
-
-<button id="stopShareMap">إيقاف مشاركة موقع</button>
- <script src="app.js"></script>
+ <script src="app.js"> </script>
 </body>
 </html>
