--- a/Lesson96/index.html
+++ b/Lesson96/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coder Shiyar - JavaScript</title>
-</head>
+    <title> Coder Shiyar </title>
+
+  </head>
 <body>
-    
 
-Coder Shiyar 
+  
+<main id="main">
 
- <script src="app.js"> </script>
+</main>
+
+<button id="stopShareMap">إيقاف مشاركة موقع</button>
+ <script src="app.js"></script>
 </body>
 </html>
